<resources>
    <string name="name">Name</string>
    <string name="app_name">Planner</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="emailusername">Email / Username</string>
    <string name="email">Email Address</string>
    <string name="Username">Username</string>
    <string name="loginbutton">LOGIN</string>
    <string name="NoAccount">Don\'t have an account? Register here</string>
    <string name="register">REGISTER</string>
    <string name="calendar">CALENDAR</string>
    <string name="notes">NOTES</string>
    <string name="add_edit_event">Add / Edit Event</string>
    <string name="title">Title:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="save_event">SAVE EVENT</string>
    <string name="delete_event">DELETE EVENT</string>
    <string name="Task_Title">Title of Task</string>
    <string name="Task_Description">Description of Task</string>
    <string name="Create_Task">Create Task</string>
    <string name="Date_created">Date created: </string>
    <string name="add">ADD</string>
    <string name="date">Date:</string>
    <string name="to_do">TO-DO</string>
    <string name="details">Details:</string>
</resources>
